v0.0.1.127 (20-01-2012)
- Added: System Info - PVR Information now shows total and used disk sizes
v0.0.1.126 (10-01-2012)
- Added: titles of recordings changed to be more descriptive
v0.0.1.125 (04-01-2012)
- Added: validation of the shares for all ForTheRecord tuners at startup
v0.0.1.124 (01-01-2012)
- Fixed Linux mutex initialisation, caused by C++ not having static constructors
v0.0.1.123 (20-12-2011)
- Pressing 'record' while viewing will schedule the recording of the show watched
- Delete Timer: will abort an active recording,
                will remove the upcoming program from the server
                will remove the corresponding schedule from the server
                (the schedule name MUST be: "XBMC - " + timer title, this is the case
                 when the schedule was added by the addon and unchanged by the user)
v0.0.1.122 (07-12-2011)
- Signal quality retrieval implemented
v0.0.1.121 (04-12-2011)
- Channel logo retrieval added
v0.0.1.120 (07-11-2011)
- Windows, Linux and OSX version using TsReader
- Reliable switching between channels with HD and SD content
- TsReader streamlined
v0.0.1.117 (unreleased)
- Adaptation to many changes within XBMC
v0.0.1.116 (16-06-2011)
- Greatly improved channel zapping
- Add timer will now force a recording when no matching show title 
  is found in the channel epg data on the server
- Add timer fixed: new PVR API
- GUI update triggers added: new PVR API
v0.0.1.115 (10-05-2011)
- First implementation of channelgroups
v0.0.1.114 (26-02-2011)
- Delete recording is now actually working...
v0.0.1.113 (26-02-2011)
- Upcoming recordings now showing as timers in EPG and timerlist
- Delete timer implemented
- Add timer implemented
v0.0.1.112 (23-02-2011)
- Fixed bad bug that caused loss of epg data every 10 minutes
v0.0.1.111 (01-02-2011)
- EPG loading optimised. Programme descriptions only loaded for ForTheRecord 1.5.1.
- EPG loads 48 hours of data now.
- Tune live stream now also supports radio.