@@ -127,6 +127,11 @@ namespace ForTheRecord
   int GetRecordingDisksInfo(Json::Value& response);
 
   /**
+   * \brief Returns version information (for display only)
+   */
+  int GetDisplayVersion(Json::Value& response);
+
+  /**
    * \brief GetPluginServices Get all configured plugin services. {activeOnly} = Set to true to only receive active plugins. 
    * \brief Returns an array containing zero or more plugin services.
    * \param activeonly  set to true to only receive active plugins
