@@ -1,5 +1,6 @@
 v0.0.1.127 (20-01-2012)
 - Added: System Info - PVR Information now shows total and used disk sizes
+                     - PVR Information now shows FTR version info
 v0.0.1.126 (10-01-2012)
 - Added: titles of recordings changed to be more descriptive
 v0.0.1.125 (04-01-2012)
